- Possibility to open as many views as needed
- By default a downloads and uploads tab is now shown
- Immediatly hide system tray icon at exit
- Make sure to many files open bug is very unlikely to happen
- Search plugin tab has now become a toolbar
- Added option to fully preallocate diskspace for torrents
- Added support for seeding from readonly filesystems

Changes in 2.1.2
- Fix 2 security vulnerabilities (thanks to Bryan Burns from Juniper Networks
for finding them)

Changes in 2.1.1
- Rewrite of webserver
- New webgui : coldmilk
- Networking thread has been split up in 2 threads, one for upload, one for
download
- Significant speed improvements when downloading over a LAN

Changes in 2.1
- Some minor bug fixes

Changes in 2.1rc1
- Share ratio column added in main view
- Added option to use a different proxy then the default KDE proxy for HTTP trackers
- Added feature to show/hide columns in main view 
- Moved search box to bottom, so that the window is not enlarged in 1024 x 768 resolutions, when you search for something
- Made sure no duplicates get into search box history
- Fixed 'Trackers' tab in InfoWidget to properly resize tracker URL label
- Zeroconf plugin added
- Added µTorrent compatible PEX
- Fixed a bug in WebInterface plugin causing JS tooltips not to show.
- Fixed a bug with 'Stop All' not stopping queued torrents.


Changes in 2.1beta1 
- WebGUI plugin added
- KTorrent can make trackerless torrents with DHT nodes.
- Added feature which saves the list of peers when a torrent is stopped and when it is started again, the list is reloaded and the peers are added to the list of potential peers so that we can quickly make connections to peers.
- Revamped data checker a bit, it now uses a separate thread.
- Added an option to automatically do a recheck after X number of corrupted chunks are found (X being configurable)
- Added 4 more default torrent groups (QM down/up, User down/up)
- Changed default groups to tree structure.