@@ -8,6 +8,7 @@ Changes in 2.2dev
 - Search plugin tab has now become a toolbar
 - Added option to fully preallocate diskspace for torrents
 - Added support for seeding from readonly filesystems
+- Make sure FileView remembers it's state
 
 Changes in 2.1.2
 - Fix 2 security vulnerabilities (thanks to Bryan Burns from Juniper Networks
